tests/ui/borrowck/borrowck-for-loop-uninitialized-binding.stderr
error[E0381]: used binding `x` is possibly-uninitialized
  --> $DIR/borrowck-for-loop-uninitialized-binding.rs:4:12
   |
LL |     let mut x: isize;
   |         ----- binding declared here but left uninitialized
LL |     for _ in 0..0 { x = 10; }
   |              ---- if the `for` loop runs 0 times, `x` is not initialized
LL |     return x;
   |            ^ `x` used here but it is possibly-uninitialized

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0381`.
